[package]
name = "rust-powered-lego"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.10.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.10", features = ["sync"] }
num-traits = "0.2.15"
num-derive = "0.3.3"
anyhow = "1.0.66"
bincode = "1.3.3"
byteorder = "1.4.3"
async-trait = "0.1.58"
winit = "0.27.5"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]